--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* Main styling for the app */
 .App {
   display: flex;
   justify-content: center;
@@ -9,7 +8,6 @@
   transition: background 0.5s ease;
 }
 
-/* Form container styling */
 .form-container {
   background-color: #f7f9f9;
   padding: 40px;
@@ -21,7 +19,6 @@
   transition: all 0.3s ease;
 }
 
-/* Title styling */
 .form-title {
   font-size: 24px;
   color: #333;
@@ -29,7 +26,6 @@
   font-weight: 600;
 }
 
-/* Input type section */
 .input-type {
   display: flex;
   justify-content: space-between;
@@ -47,7 +43,6 @@
   margin-right: 10px;
 }
 
-/* Form input fields */
 .form-label {
   display: block;
   font-size: 16px;
@@ -73,7 +68,21 @@
   outline: none;
 }
 
-/* Submit button styling */
+.test-select {
+  width: 100%;
+  padding: 12px;
+  margin-top: 5px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  font-size: 16px;
+  transition: border-color 0.3s ease;
+}
+
+.test-select:focus {
+  border-color: #4caf50;
+  outline: none;
+}
+
 .submit-button {
   background-color: #4caf50;
   color: white;
@@ -94,7 +103,6 @@
   background-color: #3e8c42;
 }
 
-/* Error and prediction message styles */
 .error-message {
   color: #e74c3c;
   margin-top: 20px;
@@ -107,7 +115,27 @@
   font-size: 18px;
 }
 
-/* Responsive design for inputs */
+.sequence-display {
+  margin-top: 10px;
+  text-align: left;
+}
+
+.sequence-display p {
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.sequence-display ul {
+  list-style-type: disc;
+  padding-left: 20px;
+  margin-top: 10px;
+}
+
+.sequence-display li {
+  font-size: 16px;
+  color: #333;
+}
+
 @media (max-width: 768px) {
   .form-container {
     padding: 30px;
@@ -123,13 +151,13 @@
   }
 
   .file-input,
-  .url-input {
+  .url-input,
+  .test-select {
     font-size: 14px;
     padding: 8px;
   }
 }
 
-/* Further adjustments for smaller screens */
 @media (max-width: 480px) {
   .form-container {
     padding: 20px;
@@ -149,7 +177,8 @@
   }
 
   .file-input,
-  .url-input {
+  .url-input,
+  .test-select {
     font-size: 14px;
     padding: 8px;
     padding-right: 2px;
